EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==11/15/2011==
Trevius: Potential zone crash fix for Discovered Items pointed out by Congdar.

==11/09/2011==
Trevius: Fixes for issues caused by the extra SoF+ item click checks.

==11/05/2011==
Trevius: Added extra checks for SoF+ item clicks.

==11/01/2011==
Trevius: Added Discovered Items table to track who discovered an item for the first time and when.
Trevius: Added new EVENT_DISCOVER_ITEM player event.  It exports the item id to the $itemid variable.
Trevius: Added Rule Character:EnableDiscoveredItems to make item discovery tracking optional.

Required SQL:
utils/sql/svn/2057_required_discovered_items.sql

Opetional SQL:
utils/sql/svn/2058_optional_rule_discovered_items.sql

==10/31/2011==
Leere: Changed raid leadership ability costs to match client expectations.
Leere: All stuns should now treat a max level of 0 as meaning level 55.

==10/24/2011==
Akkadius: Mysql CLI changes
Akkadius: Preliminary work to some future additions, added int32 Database::GetGuildDBIDByCharID(int32 char_id)

==10/23/2011==
Akkadius: Another memory leak in parser.cpp, NewEventList never deallocated
Akkadius: Reduced code checking redundancy in several places regarding functions that reference ExecWeaponProc, only valid invalid spells are checked and logged.
Akkadius: (Lerxst/Akkadius) Approximately 8 memory leak fixes based on findings from 'cppcheck', some found in loot, popup windows and a few other places.
Akkadius: (Lerxst) Various quest object fixes, sanity checks and initiator adjustments
Akkadius: (Lerxst) Minor trading code adjustments
Akkadius: (Lerxst) Logic fixes with bot code
Sorvani: Critical hit filter should work again.
Secrets: Reverted my changes.

==10/22/2011==
Derision: Underfoot: Extended Buffs should now last the correct time without needing to zone.

==10/21/2011==
Derision: Fixed rez bug.