@@ -203,15 +203,15 @@ public:
 	void MerchantSetItem(int32 NPCid, int32 itemid, int32 quantity = 0);
 	int32 MerchantCountItem(int32 NPCid, int32 itemid);
 
-	int16 CreateInstance(const char *zone, int16 version, int32 duration);
+	int16 CreateInstance(const char *zone, sint16 version, int32 duration);
 	void DestroyInstance(int16 instance_id);
-	int16 GetInstanceID(const char *zone, int16 version);
+	int16 GetInstanceID(const char *zone, sint16 version);
 	void AssignToInstance(int16 instance_id);
 	void AssignGroupToInstance(int16 instance_id);
 	void AssignRaidToInstance(int16 instance_id);
 	void MovePCInstance(int zone_id, int instance_id, float x, float y, float z, float heading);
-	void FlagInstanceByGroupLeader(int32 zone, int16 version);
-	void FlagInstanceByRaidLeader(int32 zone, int16 version);
+	void FlagInstanceByGroupLeader(int32 zone, sint16 version);
+	void FlagInstanceByRaidLeader(int32 zone, sint16 version);
 
 	const char* varlink(char* perltext, int item_id);
 	const char* saylink(char* Phrase, bool silent, char* LinkName);
